@@ -29,7 +29,6 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <release>${maven.compiler.release}</release>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
         <version>3.13.0</version>
       </plugin>
